crates/sdk-tests/tests/endpoint/endpoint_used_twice_fails.stderr
error: Each function can be annotated with `#[endpoint]` exactly once.
 --> $DIR/endpoint_used_twice_fails.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
