crates/sdk-tests/tests/endpoint/endpoint_used_twice_fails.rs
use svm_sdk::app;

#[app]
mod App {
    #[endpoint]
    #[endpoint]
    fn get() {}
}

fn main() {}
